# CodeVetter

./: .env.example  .eslintrc.json  .gitignore  AUDIT.md  README.md  agents.md  design.html  eslint.config.js  foundry.json  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: review-sidecar-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent_monitor.rs  git_watcher.rs  main.rs  talk.rs  watcher.rs
apps/desktop/src-tauri/src/adapters/: claude_code.rs  codex.rs  mod.rs
apps/desktop/src-tauri/src/commands/: accounts.rs  agents.rs  blast_radius.rs  chat.rs  chat_tabs.rs  coordination.rs  files.rs  git.rs  github_ops.rs  history.rs  linear.rs  mission.rs  mod.rs  playwright_gen.rs  preferences.rs  presets.rs  review.rs  sessions.rs  setup.rs  system_monitor.rs  talks.rs  terminal.rs  tray.rs  workspaces.rs
apps/desktop/src-tauri/src/coordination/: doc.rs  mod.rs  parser.rs  schema.rs
apps/desktop/src-tauri/src/db/: mod.rs  queries.rs  schema.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  IDEA-DUMP.md  PROJECT-LOG.md  REFERENCE.md  ROADMAP.md  TESTING.md
plans/: open-source-free-tier-strategy.md
research/: codebase-context-tools-landscape.md
(+122 files in other folders)
